[tool.poetry]
name = "aioisodd"
version = "0.2.2-beta.0"
description = "asyncio-powered 2 LoC pure Python checking whether the number is odd"
authors = ["evgfilim1 <evgfilim1@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
